[tool.poetry]
name = "prs"
version = "0.1.0"
description = ""
authors = ["Алексей <hipaman@bigmir.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
websockets = "^12.0"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
